crates/rome_cli/tests/snapshots/apply_noop.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 107
expression: content
---
## `fix.js`

```js

if(a != 0) {}

```

## Messages

Skipped 1 suggested fixes.
If you wish to apply the suggested fixes, use the command rome check --apply-suggested



