crates/rome_cli/tests/snapshots/apply_suggested.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
let a = 4;
console.log(a);

```

# Emitted Messages


