crates/rome_cli/tests/snapshots/ci_ok.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `ci.js`

```js
statement();

```

# Emitted Messages


