crates/rome_cli/tests/snapshots/correct_root.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": true,
    "formatWithErrors": true,
    "indentStyle": "tab",
    "indentSize": 2,
    "lineWidth": 80
  },
  "linter": {
    "enabled": true,
    "rules": {
        "js": {
            "noDeadCode": "off",
            "useSimplifiedLogicExpression": "warn",
            "noCatchAssign": "error",
            "noLabelVar": {
                "level": "warn"
            },
            "useTemplate": {
                "level": "error"
            }
        }
    }
  },
  "javascript": {
    "globals": ["$"],
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

# Emitted Messages


