crates/rome_cli/tests/snapshots/format_is_disabled.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}

```

## `file.js`

```js

function f() {
return { something }
}

```

# Emitted Messages

```block
file.js: error[IO]: unhandled file type
```


