crates/rome_cli/tests/snapshots/format_stdin_successfully.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {
	return {};
}

```


